--- a/.github/workflows/ztv-admin.yml
+++ b/.github/workflows/ztv-admin.yml
@@ -3,7 +3,7 @@ name: Deploy Admin Panel
 on:
   push:
     branches:
-      - main
+      - main # or your default branch
   workflow_dispatch:
 
 jobs:
@@ -14,30 +14,42 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up SSH
+      - name: Set up SSH and deploy to server
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY_ADMIN }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
+
+          # Add known hosts
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           ssh-keyscan ${{ secrets.SERVER_IP_ADMIN }} >> ~/.ssh/known_hosts
 
-      - name: Deploy to server
-        run: |
+          # SSH into EC2 and deploy
           ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME_ADMIN }}@${{ secrets.SERVER_IP_ADMIN }} << 'EOF'
+            # Set up Node (if using nvm)
             export NVM_DIR="$HOME/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
 
+            # Remove old admin panel folder if exists
+            rm -rf /var/www/html/z-tv/admin-panel
+
+            # Clone the repo fresh
+            git clone git@github.com:Zyacom/ZyacomtvAdminPanel.git /var/www/html/z-tv/admin-panel
             cd /var/www/html/z-tv/admin-panel || exit 1
 
-            git pull origin main
+            # Install dependencies
             npm install
+
+            # Build admin panel with /admin base
             npx vite build --base=/admin/
 
-            sudo rm -rf /var/www/html/z-tv/admin-panel/*
-            sudo cp -r dist/* /var/www/html/z-tv/admin-panel/
-            sudo rm -rf dist
+            # Move dist contents to root of admin-panel folder
+            rm -rf *
+            mv dist/* ./
+            rm -rf dist
 
+            # Reload Nginx
             sudo nginx -t && sudo systemctl reload nginx
+
             echo "Admin panel deployed successfully."
           EOF
