--- a/.github/workflows/ztv-admin.yml
+++ b/.github/workflows/ztv-admin.yml
@@ -17,8 +17,15 @@ jobs:
       - name: Set up SSH and deploy to server
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY_ADMIN }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY_ADMIN }}" > ~/.ssh/id_ed25519_admin
+          chmod 600 ~/.ssh/id_ed25519_admin
+
+          # Configure SSH to use github.com-admin for cloning
+          echo "Host github.com-admin
+                  HostName github.com
+                  User git
+                  IdentityFile ~/.ssh/id_ed25519_admin" >> ~/.ssh/config
+          chmod 600 ~/.ssh/config
 
           # Add known hosts
           ssh-keyscan github.com >> ~/.ssh/known_hosts
@@ -33,8 +40,8 @@ jobs:
             # Remove old admin panel folder if exists
             sudo rm -rf /var/www/html/z-tv/admin-panel
 
-            # Clone the repo fresh
-            sudo git clone git@github.com:Zyacom/ZyacomtvAdminPanel.git /var/www/html/z-tv/admin-panel
+            # Clone the repo fresh using the host alias
+            sudo git clone git@github.com-admin:Zyacom/ZyacomtvAdminPanel.git /var/www/html/z-tv/admin-panel
             cd /var/www/html/z-tv/admin-panel || exit 1
 
             # Install dependencies
