--- a/.github/workflows/ztv-admin.yml
+++ b/.github/workflows/ztv-admin.yml
@@ -45,7 +45,7 @@ jobs:
             sudo rm -rf /var/www/html/z-tv/admin-panel/.[!.]*
 
             # Clone the admin panel repo fresh
-            sudo git clone git@github.com-admin:Zyacom/ZyacomtvAdminPanel.git /var/www/html/z-tv/admin-panel
+            sudo git clone git@github.com:Zyacom/ZyacomtvAdminPanel.git /var/www/html/z-tv/admin-panel
             cd /var/www/html/z-tv/admin-panel || exit 1
 
             # Install dependencies
