--- a/.github/workflows/ztv-admin.yml
+++ b/.github/workflows/ztv-admin.yml
@@ -16,29 +16,24 @@ jobs:
 
       - name: Deploy Admin Panel
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME_ADMIN }}@${{ secrets.SERVER_IP_ADMIN }} << 'EOF'
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.USERNAME_ADMIN }}@${{ secrets.SERVER_IP_ADMIN }} << 'EOF'
             # Remove old folder
             sudo rm -rf /var/www/html/z-tv/admin-panel
 
-            # Clone with explicit key
+            # Clone using the admin key already on the server
             sudo GIT_SSH_COMMAND='ssh -i ~/.ssh/id_ed25519_admin -o StrictHostKeyChecking=no' \
             git clone git@github.com:Zyacom/ZyacomtvAdminPanel.git /var/www/html/z-tv/admin-panel
 
             cd /var/www/html/z-tv/admin-panel || exit 1
-
-            # Install dependencies
             npm install
-
-            # Build admin panel
             npx vite build --base=/admin/
-
-            # Move dist contents to root
             sudo rm -rf *
             sudo mv dist/* ./
             sudo rm -rf dist
-
-            # Reload Nginx
             sudo nginx -t && sudo systemctl reload nginx
-
             echo "Admin panel deployed successfully."
           EOF
