--- a/.github/workflows/ztv-admin.yml
+++ b/.github/workflows/ztv-admin.yml
@@ -48,8 +48,8 @@ jobs:
 
             # Move dist contents to root of admin-panel folder
             # sudo rm -rf *
-            # sudo mv dist/* ./
-            # sudo rm -rf dist
+            sudo mv dist/* ./
+            sudo rm -rf dist
 
             # Reload Nginx
             sudo nginx -t && sudo systemctl reload nginx
