--- a/.github/workflows/ztv-admin.yml
+++ b/.github/workflows/ztv-admin.yml
@@ -34,7 +34,7 @@ jobs:
             sudo rm -rf /var/www/html/z-tv/admin-panel
 
             # Clone the repo fresh
-            sudo git clone https://github.com/Zyacom/ZyacomtvAdminPanel.git /var/www/html/z-tv/admin-panel
+            git clone git@github.com:Zyacom/ZyacomtvAdminPanel.git /var/www/html/z-tv/admin-panel
             cd /var/www/html/z-tv/admin-panel || exit 1
 
             # Ensure correct ownership
