--- a/.github/workflows/ztv-admin.yml
+++ b/.github/workflows/ztv-admin.yml
@@ -13,45 +13,49 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          # Use SSH so it matches the server key
+          ssh-key: ${{ secrets.SSH_PRIVATE_KEY_ADMIN }}
 
       - name: Set up SSH and deploy to server
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY_ADMIN }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY_ADMIN }}" > ~/.ssh/id_ed25519_admin
+          chmod 600 ~/.ssh/id_ed25519_admin
 
-          # Add known hosts
+          # Add known hosts to prevent prompt
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           ssh-keyscan ${{ secrets.SERVER_IP_ADMIN }} >> ~/.ssh/known_hosts
 
           # SSH into EC2 and deploy
-          ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME_ADMIN }}@${{ secrets.SERVER_IP_ADMIN }} << 'EOF'
-            # Set up Node (if using nvm)
+          ssh -i ~/.ssh/id_ed25519_admin -o StrictHostKeyChecking=no ${{ secrets.USERNAME_ADMIN }}@${{ secrets.SERVER_IP_ADMIN }} << 'EOF'
+            set -e  # Exit if any command fails
+
+            # Optional: Load NVM if using Node via nvm
             export NVM_DIR="$HOME/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
 
-            # Remove old admin panel folder if exists
+            # Remove old admin panel safely
             sudo rm -rf /var/www/html/z-tv/admin-panel
 
             # Clone the repo fresh
             sudo git clone git@github.com:Zyacom/ZyacomtvAdminPanel.git /var/www/html/z-tv/admin-panel
             cd /var/www/html/z-tv/admin-panel || exit 1
 
-            # Ensure correct ownership
+            # Ensure correct ownership for files
             sudo chown -R $USER:$USER /var/www/html/z-tv/admin-panel
 
             # Install dependencies
-            npm install
+            npm ci
 
             # Build admin panel with /admin base
             npx vite build --base=/admin/
 
-            # Move dist contents to root of admin-panel folder
-            # sudo rm -rf *
+            # Move dist contents to root and clean up
             sudo mv dist/* ./
             sudo rm -rf dist
 
-            # Reload Nginx
+            # Test Nginx config and reload
             sudo nginx -t && sudo systemctl reload nginx
 
             echo "Admin panel deployed successfully."
