--- a/.github/workflows/ztv-admin.yml
+++ b/.github/workflows/ztv-admin.yml
@@ -1,55 +1,55 @@
-name: Deploy Admin Panel
+# name: Deploy Admin Panel
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+# on:
+#   push:
+#     branches:
+#       - main
+#   workflow_dispatch:
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
 
-      - name: Set up SSH and deploy to server
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY_ADMIN }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+#       - name: Set up SSH and deploy to server
+#         run: |
+#           mkdir -p ~/.ssh
+#           echo "${{ secrets.SSH_PRIVATE_KEY_ADMIN }}" > ~/.ssh/id_rsa
+#           chmod 600 ~/.ssh/id_rsa
 
-          # Add known hosts
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          ssh-keyscan ${{ secrets.SERVER_IP_ADMIN }} >> ~/.ssh/known_hosts
+#           # Add known hosts
+#           ssh-keyscan github.com >> ~/.ssh/known_hosts
+#           ssh-keyscan ${{ secrets.SERVER_IP_ADMIN }} >> ~/.ssh/known_hosts
 
-          # SSH into EC2 and deploy
-          ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME_ADMIN }}@${{ secrets.SERVER_IP_ADMIN }} << 'EOF'
-            # Set up Node (if using nvm)
-            export NVM_DIR="$HOME/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+#           # SSH into EC2 and deploy
+#           ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME_ADMIN }}@${{ secrets.SERVER_IP_ADMIN }} << 'EOF'
+#             # Set up Node (if using nvm)
+#             export NVM_DIR="$HOME/.nvm"
+#             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
 
-            # Remove old admin panel folder if exists
-            sudo rm -rf /var/www/html/z-tv/admin-panel
+#             # Remove old admin panel folder if exists
+#             sudo rm -rf /var/www/html/z-tv/admin-panel
 
-            # Clone the repo fresh
-            sudo git clone git@github.com:Zyacom/ZyacomtvAdminPanel.git /var/www/html/z-tv/admin-panel
-            cd /var/www/html/z-tv/admin-panel || exit 1
+#             # Clone the repo fresh
+#             sudo git clone git@github.com:Zyacom/ZyacomtvAdminPanel.git /var/www/html/z-tv/admin-panel
+#             cd /var/www/html/z-tv/admin-panel || exit 1
 
-            # Install dependencies
-            npm install
+#             # Install dependencies
+#             npm install
 
-            # Build admin panel with /admin base
-            npx vite build --base=/admin/
+#             # Build admin panel with /admin base
+#             npx vite build --base=/admin/
 
-            # Move dist contents to root of admin-panel folder
-            sudo rm -rf *
-            sudo mv dist/* ./
-            sudo rm -rf dist
+#             # Move dist contents to root of admin-panel folder
+#             sudo rm -rf *
+#             sudo mv dist/* ./
+#             sudo rm -rf dist
 
-            # Reload Nginx
-            sudo nginx -t && sudo systemctl reload nginx
+#             # Reload Nginx
+#             sudo nginx -t && sudo systemctl reload nginx
 
-            echo "Admin panel deployed successfully."
-          EOF
+#             echo "Admin panel deployed successfully."
+#           EOF
